--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 
     <div class="sale-image">
         <img src="./images/Sale-image.png" alt="Sale Image">
+        <div class="sale-image__offer">
+            <h2>Udemy Flash Sale! 24 hours to save.</h2>
+            <p>Get the top course for juse 499. Just one day to save but a lifetime to learn</p>
+        </div>
     </div>
 
     <!--Recommended-->
